# tlemmas-enumeration

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: allsmt.py  divconq.py  divconq_with_proj.py  divconq_with_proj_and_partitioning.py
src/enumerators/: formula.py
src/enumerators/solvers/: lemma_extractor.py  mathsat_partial_extended.py  mathsat_total.py  mathsat_utils.py  solver.py  tabular.py  with_partitioning.py
src/enumerators/util/: collections.py  pysmt.py
src/enumerators/walkers/: normalizer.py  size_counter.py  term_ite_checker.py  walker_bcs12.py  walker_bdd.py  walker_bool_abstraction.py  walker_ldd.py  walker_refinement.py  walker_sdd.py  walker_t_atoms_extractor.py  walker_xsdd.py
tests/: conftest.py  test_formula.py  test_lemmas_generators.py
tests/items/: test_lemmas.smt2
tests/walkers/: test_walker_boolean_abstraction.py
